--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,13 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@antv/g6": "^5.0.42",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
+    "@mui/x-data-grid": "^7.25.0",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
+    "axios": "^1.7.9",
+    "mermaid": "^11.4.1",
+    "react": "^18.0.0",
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "^18.0.0",
+    "react-force-graph": "^1.46.0",
+    "react-router-dom": "^7.1.5",
+    "three": "^0.173.0",
+    "three-spritetext": "^1.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.173.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -24,6 +39,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
